--- a/Finnish/main/QuickSearchBox.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/QuickSearchBox.apk/res/values-fi-rFI/strings.xml
@@ -86,7 +86,7 @@ Voit vaihtaa asetusta Asetukset &gt; Asennetut sovellukset &gt; Haku"</string>
   <string name="search_settings">Hae asetuksia</string>
   <string name="search_sources">Haettavat kohteet</string>
   <string name="search_sources_summary">Valitse, mitä laitteesta Haetaan</string>
-  <string name="search_suggestion">Vinkit</string>
+  <string name="search_suggestion">Ehdotukset</string>
   <string name="search_videos">Hae videoita</string>
   <string name="search_widget">Haku</string>
   <string name="send_secret_code">Lähetä koodi</string>
