--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -576,20 +576,17 @@ Et menetä mitään sovellustietoja."</string>
   <string name="charging_text_battery_nearly_full">Ladattu lähes täyteen</string>
   <string name="charging_text_battery_perfect">Ladattu täyteen</string>
   <string name="choose">Valitse</string>
+  <string name="choose_gs_show_way">Valitse kotisivun suunta</string>
   <string name="clean_immediately">Tyhjennä</string>
   <string name="cleaned">Tyhjennetty</string>
   <string name="clear_garbage">Tyhjennä roskat vapauttaaksesi tilaa</string>
   <string name="clear_immediately">Puhdista nyt</string>
   <string name="close">Sulje</string>
   <string name="close_callwait">Pois päältä</string>
-  <string name="close_lucky_money_dialog_ok">确认关闭</string>
-  <string name="close_lucky_money_dialog_summary">确定关闭红包助手？关闭后将无法收到红包助手为您发来的红包特别提醒，可能会导致您错过红包。如您想关闭悬浮窗，可在更多设置进行关闭。</string>
-  <string name="close_lucky_money_dialog_title">关闭红包助手</string>
   <string name="cmcc_app_check_dialog_message">Suorita korjaus loppuun käynnistämällä laite uudelleen.</string>
   <string name="cmcc_app_check_dialog_negative">Myöhemmin</string>
   <string name="cmcc_app_check_dialog_positive">Käynnistä uudelleen nyt</string>
   <string name="cmcc_app_check_dialog_title">Järjestelmä korjattu</string>
-  <string name="cmd_lucky_float">摇一摇</string>
   <string name="confirmSecondSpacePassword">Vahvista Toisen tilan salasana</string>
   <string name="confirm_bind_xiaomi_account_dialog_title">Lisätään Mi Tili</string>
   <string name="confirm_fingerprint_msg">Vahvista sormenjälkesi</string>
@@ -944,8 +941,12 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="free_time_traffic_title">Syötä hiljaisen ajan datan raja</string>
   <string name="free_traffic_settings">Hiljaisen ajan datan käyttö asetukset</string>
   <string name="function_close">Pois päältä</string>
-  <string name="function_shield_summary">Rajoita automaattista kirkkautta, kuvakaappauksen eleitä ja Lukutilaa</string>
-  <string name="function_shield_summary_m">Rajoita automaattista kirkkautta ja kuvakaappauksen eleitä</string>
+  <string name="function_shield_auto_bright">Poista automaattinen kirkkaus käytöstä</string>
+  <string name="function_shield_eye_shield">Poista Lukutila käytöstä</string>
+  <string name="function_shield_pull_notification_bar">Älä avaa Ilmoitusaluetta</string>
+  <string name="function_shield_settings_title">Rajoita seuraavia ominaisuuksia pelaamisen aikana</string>
+  <string name="function_shield_summary">Rajoita valittuja järjestelmän ominaisuuksia pelaamisen aikana</string>
+  <string name="function_shield_three_finger">Rajoita kuvakaappauksen eleitä</string>
   <string name="function_shield_title">Paranneltu kokemus</string>
   <string name="fw_blocked">Estolista</string>
   <string name="fw_blocked_count">"Estetty "</string>
@@ -1098,6 +1099,9 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="gs_open_game_booster_summary">Paranna verkon nopeutta pelejä varten</string>
   <string name="gs_performance_mode">Suorituskykytila</string>
   <string name="gs_performance_mode_detail">Optimoi järjestelmän suorituskyky pelejä varten</string>
+  <string name="gs_show_way">Kotisivun suunta</string>
+  <string name="gs_show_way_horizontal">Vaakasuora</string>
+  <string name="gs_show_way_vertical">Pystysuora</string>
   <string name="gs_sign_notification">Muistuta kirjautua sisään päivittäin klo 20</string>
   <string name="gs_slip_gamebox_detail">Käytä liukusäädintä tai pyyhkäise näytön yläreunasta tuodaksesi pikakuvakepaneelin näkyviin</string>
   <string name="guide_get_operator_error">Väärä operaattori?</string>
