--- a/Finnish/main/QuickSearchBox.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/QuickSearchBox.apk/res/values-fi-rFI/strings.xml
@@ -35,7 +35,7 @@ Käytä Selaimen asetuksia selainhistorian tyhjentämiseen."</string>
   <string name="cta_declaration_negative_text">Älä salli</string>
   <string name="cta_declaration_positive_text">Salli</string>
   <string name="cta_declaration_title">Palveluehdot</string>
-  <string name="default_hint">Hae sovelluksia, musiikkia, videoita, kirjoja…</string>
+  <string name="default_hint">Hae laitteesta tai verkosta…</string>
   <string name="device_settings_category_title">Poista pikakuvakkeet</string>
   <string name="entrance_setting">Avataan hakua</string>
   <string name="google_app_label">Google Haku</string>
