--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -359,7 +359,7 @@ Muotokuvatilassa"</string>
   <string name="portait_effect_entry_movie">Elokuva</string>
   <string name="portait_effect_entry_nature">Luonto</string>
   <string name="portait_effect_entry_pink">Punastua</string>
-  <string name="portait_effect_entry_riddle">Arvoitus</string>
+  <string name="portait_effect_entry_riddle">Karkki</string>
   <string name="portait_effect_entry_romance">Romanttinen</string>
   <string name="portait_effect_entry_sepia">Seepia</string>
   <string name="portait_effect_entry_story">Tarina</string>
